--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class ="contain">
-    <h1>Drum Kit</h1>
+    <h1>Drum Kit Sound</h1>
     <div class="keys">
             <div data-key="65" class="key">A (Tom)</div>
             <div data-key="66" class="key">B (Tink)</div>
